<resources>

<!--     <string name="app_server">http://xiaoyu122.vicp.cc:49245/SynContactsServer</string> -->
<!-- 	<string name="app_server">http://192.168.1.102/SynContactsServer</string> -->
<!-- 	<string name="app_server">http://xiaoyu122.vicp.cc:49245/SynContactsServer</string> -->
	<string name="app_server">http://192.168.1.110/SynContactsServer</string>
    <string name="app_name">SynContactsDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_user_name">用户名:</string>
    <string name="text_user_password">密   码:</string>
    <string name="text_remind_psd">记住密码</string>
    <string name="text_auto_login">自动登陆</string>
    <string name="text_login">登&#160;&#160;&#160;&#160;陆</string>
    <string name="text_backup">备份</string>
    <string name="text_restore">还原</string>
    <string name="text_send_msg">向好友发送短信</string>
    <string name="send_message_to_contacts">向联系人发送短信</string>
    <string name="more_setting">更多设置</string>
    <string name="restore_contacts">还原通讯录</string>
    <string name="syncontact_contacts">同&#160;&#160;&#160;&#160;步</string>
    <string name="warning_text_show_without_simcard">无法读取到SIM卡，程序将不能进行发送短信操作</string>
    <string name="warn_text_show_without_network_avaliable">没有可用网络，程序将不能进行同步还原操作</string>
   

</resources>
