<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/login_bg_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/login_background" >
    </ImageView>

    <LinearLayout
        android:id="@+id/linearLayout_one"
        android:layout_width="wrap_content"
        android:layout_height="120dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="150dip"
        android:background="@drawable/login_input_bg"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80.0dip"
            android:layout_marginRight="40.0dip"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:ems="10"
            android:hint="请输入用户名"
            android:singleLine="true"
            android:textColor="#ff858585"
            android:textSize="15.0sp" >
        </EditText>

        <EditText
            android:id="@+id/editTextUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="80.0dip"
            android:layout_marginRight="40.0dip"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:ems="10"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#ff858585"
            android:textSize="15.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_one"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBoxAutoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:button="@drawable/autologin_checkbox_bg"
            android:text="@string/text_auto_login"
            android:textColor="#ff858585"
            android:textSize="15.0sp" />

      
            <CheckBox
                android:id="@+id/checkBoxRemindPsd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dip"
                android:button="@drawable/autologin_checkbox_bg"
                android:text="@string/text_remind_psd"
                android:textColor="#ff858585"
                android:textSize="15.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_two"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="11dip" >

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/common_button_background"
            android:text="@string/text_login"
            android:textColor="#ff57ace4"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>