<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/restore_contacts_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:background="@drawable/menu_item_background"
            android:clickable="true"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:duplicateParentState="true" >

                <ImageView
                   android:layout_marginLeft="3dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:duplicateParentState="true"
                    android:src="@drawable/restore_icon" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dip"
                android:duplicateParentState="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/restore_contacts"
                    android:textColor="@color/blue_font"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/send_message_to_contacts_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:background="@drawable/menu_item_background"
            android:clickable="true"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:duplicateParentState="true" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                      android:layout_marginLeft="3dip"
                    android:layout_centerVertical="true"
                    android:duplicateParentState="true"
                    android:src="@drawable/send_message_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dip"
                android:duplicateParentState="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/send_message_to_contacts"
                    android:textColor="@color/blue_font"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/more_setting_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:background="@drawable/menu_item_background"
            android:clickable="true"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:duplicateParentState="true" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                      android:layout_marginLeft="3dip"
                    android:layout_centerVertical="true"
                    android:duplicateParentState="true"
                    android:src="@drawable/setting_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dip"
                android:duplicateParentState="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/more_setting"
                    android:textColor="@color/blue_font"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>
      
    </LinearLayout>

</RelativeLayout>